fixed the alignment of the text at landing page

--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -7,11 +7,12 @@ body {
     display: block;
     width: 100%;
     min-height: 550px;
+    position: relative;
 }
 
 div.textBlock p {
     color: black;
-    font-size: 20px;
+    font-size: 22px;
     margin-top: 20px;
     margin-bottom: 20px;
     font-weight: 400;
@@ -24,17 +25,24 @@ div.textBlock p {
 .textBlock {
     display: inline-block;
     width: 30%;
-    padding-left: 80px;
     text-align: left;
-    padding-top: 60px;
-    vertical-align: top;
+    vertical-align: middle;
+    left: 5%;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
 .Divblock {
-    display:inline-block;
+    display: inline-block;
+    text-align: right;
     width: 70%;
-    padding-top:20px;
-    padding-bottom:20px;
+    position: absolute;
+    top: 50%;
+    right: 5%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
 .displayBlock {
